prevent line-wraps (not enough space)

--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -181,6 +181,7 @@ input[type=range]:focus::-ms-fill-upper
     border-radius: 5px;
     padding: 2px 5px;
     cursor: pointer;
+    white-space: nowrap;
 
     position: absolute;
     bottom: 5px;
